event page displays events from database

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {%block body%}
 <div>
     <h1>Stadium Management System</h1>
-    <button>Login</button>
+    <button ><a href="/events">go to events</a></button>
     <button>Signup</button>
 </div>
 {% endblock %}
