--- a/templates/events.html
+++ b/templates/events.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Stadium Management System - Events</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body style="background-color: #8ab6d6;">
-
+{% extends 'base.html' %}
+{% block head %}
+<title>Stadium Management System-Events</title>
+{% endblock %}
+{% block body %}
+<div>
 <h2>Pick an Event</h2>
-
-<a href="football.html">Football</a><br>
-<a href="cricket.html">Cricket</a><br>
-<a href="concert.html">Taylor Swift Concert</a><br>
-
-</body>
+{%for event in events%}
+<a href="/book/{{event[0]}}">{{event[1]}}</a>
+{%endfor%}
+</div>
+{%endblock%}
 </html>
