--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,14 @@
+
 {% extends 'base.html' %}
 {% block head %}
 <title>Stadium Management System</title>
 {% endblock %}
-{%block body%}
-<div>
-    <h1>Stadium Management System</h1>
-    <button ><a href="/events">go to events</a></button>
-    <button>Signup</button>
+{% block body %}
+<h1>Stadium Management System</h1>
+<div class="container">
+    <div class="button-container">
+        <button><a href="/events">Go to Events</a></button>
+        <button>Signup</button>
+    </div>
 </div>
 {% endblock %}
-
-
-
