--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, p, ul, ol, li, form, input, button {
 body {
     font-family:cursive;
     color: #333;
-    font-size: 40px;
+    font-size: 35px;
 }
 
 /* Global styles */
@@ -18,7 +18,7 @@ body {
 /* Center the title */
 h1 {
     text-align: center;
-    margin-top: 50px; /* Adjust as needed */
+    margin-top: 40px; /* Adjust as needed */
 }
 
 /* Stylish box for buttons */
@@ -26,7 +26,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
 }
 
 .button-container {
@@ -34,11 +34,11 @@ h1 {
 }
 
 .button-container button {
-    padding: 15px 40px; /* Adjust as needed */
-    margin: 10px;
+    padding: 30px 60px; /* Adjust as needed */
+    margin: 20px;
     border: none;
     border-radius: 8px;
-    background-color: rgb(233, 89, 67) 175, 168); /* Green button background */
+    background-color: rgb(57, 200, 181); /* Green button background */
     color: white;
     cursor: pointer;
     font-size: 16px;
@@ -58,4 +58,65 @@ a {
 a:hover {
     text-decoration: underline;
     color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Add your existing CSS rules here */
+
+/* Event container styles */
+.event-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 100px;
+}
+/* Center the title */
+h2 {
+    text-align: center;
+    margin-top: 50px; /* Adjust as needed */
+}
+/* Event box styles */
+.event-box {
+    width: 200px; /* Adjust the width as needed */
+    margin: 15px;
+    padding: 50px;
+    border-radius: 8px;
+    background-color:rgb(57, 200, 181); /* White background */
+    transition: background-color 0.3s ease;
+}
+
+.event-box:hover {
+    background-color: #4cdf54; /* Darker green on hover */
+}
+
+/* Image styles */
+.event-box img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+/* Link styles */
+.event-box a {
+    display: block;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+.event-box a:hover {
+    text-decoration: underline;
 }
