--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="button-container">
         <button><a href="/events">Go to Events</a></button>
-        <button>Signup</button>
+        <button><a href="/login">Admin login</a></button>
     </div>
 </div>
 {% endblock %}
