--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -26,7 +26,7 @@
 
     <div class="container">
         <div class="button-container">
-            <div class="button-box" onclick="location.href='manage_event.html'">
+            <div class="button-box" onclick="location.href='/admin/manage_event'">
                 <h2>Event</h2>
             </div>
             <div class="button-box" onclick="location.href='manage_staff.html'">
