--- a/templates/manage_event.html
+++ b/templates/manage_event.html
@@ -13,11 +13,17 @@
     <div class="container">
         <div class="button-container">
             <div class="button-box">
-                <a href="#">Add Event</a>
+                <a href="/admin/create_event">Add Event</a>
             </div>
-            <div class="button-box">
-                <a href="#">Remove Event</a>
-            </div>
+            {% for event in events %}
+        <div class="event-box">
+            {{ event[1] }}
+        </div>
+        <div class="button-box">
+            <a href="/admin/delete_event/{{event}}">Remove Event</a>
+        </div>
+    {% endfor %}
+            
         </div>
     </div>
 
