--- a/templates/manage_vendor.html
+++ b/templates/manage_vendor.html
@@ -13,10 +13,10 @@
     <div class="container">
         <div class="button-container">
             <div class="button-box">
-                <a href="#">Add Vendor</a>
+                <a href="/admin/create_vendor">Add Vendor</a>
             </div>
             <div class="button-box">
-                <a href="#">Remove Vendor</a>
+                <a href="">Remove Vendor</a>
             </div>
         </div>
     </div>
