--- a/templates/manage_event.html
+++ b/templates/manage_event.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Event - Stadium Management System</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block head %}
+<title>Stadium Management System</title>
+{% endblock %}
+{% block body %}
 
     <h1>Manage Event</h1>
 
@@ -26,6 +22,6 @@
             
         </div>
     </div>
+{% endblock %}
 
-</body>
-</html>
+
