--- a/templates/manage_vendor.html
+++ b/templates/manage_vendor.html
@@ -16,6 +16,14 @@
                 <a href="/admin/create_vendor">Add Vendor</a>
             </div>
             <div class="button-box">
+                {% for vendor in vendors %}
+                <div class="event-box">
+                    {{ vendor[1] }}
+                </div>
+                <div class="button-box">
+                    <a href="/admin/delete_vendor/{{vendor}}">Remove Vendor</a>
+                </div>
+            {% endfor %}
                 <a href="">Remove Vendor</a>
             </div>
         </div>
