--- a/templates/manage_staff.html
+++ b/templates/manage_staff.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Staff - Stadium Management System</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
+{% extends 'base.html' %}
+{% block head %}
+<title>Stadium Management System</title>
+{% endblock %}
+
+{% block body %}
 
     <h1>Manage Staff</h1>
 
@@ -27,5 +24,5 @@
         </div>
     </div>
 
-</body>
-</html>
+{% endblock %}
+
