displaying table for vendor

--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -15,7 +15,7 @@
             <div class="button-box" onclick="location.href='/admin/manage_event'">
                 <h2>Event</h2>
             </div>
-            <div class="button-box" onclick="location.href='manage_staff.html'">
+            <div class="button-box" onclick="location.href='/admin/manage_staff'">
                 <h2>Staff</h2>
             </div>
             <div class="button-box" onclick="location.href='/admin/manage_vendor'">
