--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Stadium Management System - Login</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body style="background-color: #8ab6d6;"> <!-- Blue Theme Background -->
+{% extends 'base.html' %}
 
 <form>
     <label for="username">Username:</label>
@@ -14,5 +8,4 @@
     <input type="submit" value="Login">
 </form>
 
-</body>
-</html>
+
