--- a/templates/events.html
+++ b/templates/events.html
@@ -2,13 +2,21 @@
 {% block head %}
 <title>Stadium Management System-Events</title>
 {% endblock %}
+
 {% block body %}
 <h2>Pick an Event</h2>
 
-<div class="event-container">
+<div class="row justify-content-center">
     {% for event in events %}
-        <div class="event-box">
-            <a href="/book/{{ event[0] }}">{{ event[1] }}</a>
+        <div class="col-md-6">
+            <div class="card mb-3">
+                <div class="card-header">
+                    {{ event[1] }}
+                </div>
+                <div class="card-body">
+                    <a href="/book/{{ event[0] }}" class="btn btn-primary">Book Now</a>
+                </div>
+            </div>
         </div>
     {% endfor %}
 </div>
