mange staff done

--- a/templates/events.html
+++ b/templates/events.html
@@ -14,7 +14,7 @@
                     {{ event[1] }}
                 </div>
                 <div class="card-body">
-                    <a href="/book/{{ event[0] }}" class="btn btn-primary">Book Now</a>
+                    <a href="/booking_page/{{ event[0] }}" class="btn btn-primary">Book Now</a>
                 </div>
             </div>
         </div>
