--- a/templates/bookingpage_ashlin.html
+++ b/templates/bookingpage_ashlin.html
@@ -7,14 +7,14 @@
 <h2>Book seats</h2>
 
 <div>
-    <form method="POST" action="{{ url_for('book', id=id) }}">
+    <form method="POST" action="{{ url_for('booking_page', id=id) }}">
         <!-- Render seats dynamically based on your data -->
-        {% for seat in seats %}
+        <!-- {% for seat in seats %}
           <label>
             <input type="checkbox" name="selected_seats" value="{{ seat.Seat_no }}">
             {{ seat.Seat_no }} ({{ seat.stand_name }})
           </label><br>
-        {% endfor %}
+        {% endfor %} -->
       
         <button type="submit">Book Selected Seats</button>
       </form>
