--- a/templates/bookingpage.html
+++ b/templates/bookingpage.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Stadium Management System-Events</title>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
 {% block body %}
 <h2>Book seats</h2>
 <form method="POST" action="{{ url_for('booking_page', id=id) }}">
-{% for standname in standnames %}
+    {% for standname in standnames %}
+    <div class="stand-box">
+        <h3>{{ standname['stand_name'] }}</h3>
+    </div>
 <table>
-    <h3>{{ standname['stand_name'] }}</h3>
     <table>
         <thead>
             <tr>
@@ -35,7 +38,5 @@
 
     <button type="submit">Book Selected Seats</button>
 </form>
+
 {% endblock %}
-
-
-
