--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -33,12 +33,12 @@
 
             <div>
                 <label for="start_time">Start Time:</label>
-                <input type="time" name="start_time" required>
+                <input type="text" name="start_time" required>
             </div>
 
             <div>
                 <label for="end_time">End Time:</label>
-                <input type="time" name="end_time" required>
+                <input type="text" placeholder="hh:mm::ss" name="end_time" required>
             </div>
             
             <div>
