--- a/templates/manage_vendor.html
+++ b/templates/manage_vendor.html
@@ -1,5 +1,6 @@
 {% block head %}
 <title>Stadium Management System-Events</title>
+<link rel="stylesheet" type="text/css" href="static\css\styles.css">
 {% endblock %}
 
 {% block body %}
