--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block head %}
     <title>Create Event</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
 {% block body %}
     <div>
