--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Stadium Management System</title>
+<link rel="stylesheet" type="text/css" href="static\css\styles.css">
 {% endblock %}
 {% block body %}
 <h1>Stadium Management System</h1>
