--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -2,6 +2,8 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Ticket Confirmation</title>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
 {% endblock %}
 {% block body %}
 <h2>Ticket Confirmation</h2>
