--- a/templates/events.html
+++ b/templates/events.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Stadium Management System-Events</title>
+<link rel="stylesheet" type="text/css" href="static\css\styles.css">
+
 {% endblock %}
 
 {% block body %}
