--- a/templates/manage_staff.html
+++ b/templates/manage_staff.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block head %}
 <title>Stadium Management System</title>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
 {% endblock %}
 
 {% block body %}
