--- a/templates/payment.html
+++ b/templates/payment.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block head %}
     <title>Booking Details</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
 {% endblock %}
 {% block body %}
     <h2>Booking Details</h2>
