--- a/templates/events.html
+++ b/templates/events.html
@@ -11,10 +11,10 @@
         <div class="col-md-6">
             <div class="card mb-3">
                 <div class="card-header">
-                    {{ event[1] }}
+                    {{ event['event_name'] }}
                 </div>
                 <div class="card-body">
-                    <a href="/booking_page/{{ event[0] }}" class="btn btn-primary">Book Now</a>
+                    <a href="/booking_page/{{ event['event_id'] }}" class="btn btn-primary">Book Now</a>
                 </div>
             </div>
         </div>
