--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -138,7 +138,7 @@ h2 {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #422f2f;
+    border: 1px solid #f6f6f6;
     box-sizing: border-box;
 }
 
