--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,9 @@
         <div class="button-box">
             <a href="/login">Admin login</a>
         </div>
+        <div class="button-box">
+            <a href="/parking">Parking</a>
+        </div>
     </div>
 </div>
 {% endblock %}
