--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -19,8 +19,12 @@
 
             <div>
                 <label for="event_type">Event Type:</label>
-                <input type="text" name="event_type" required>
+                <select name="event_type" required>
+                    <option value="concert">Concert</option>
+                    <option value="sport">Sports Event</option>
+                </select>
             </div>
+            
 
             <div>
                 <label for="stadium_id">Stadium ID:</label>
