--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -85,9 +85,8 @@ h2 {
     padding: 50px;
     border-radius: 8px;
     transition: background-color 0.3s ease;
-    background-color: rgb(0, 255, 255) /* White background */
+    background-color: rgb(0, 255, 255); /* White background */
 }
-
 
 .event-box:hover {
     background-color: #030403; /* Darker green on hover */
@@ -164,19 +163,19 @@ h2 {
     margin-bottom: 15px; /* Adjust as needed */
 }
 
-    /* Centered box styles */
+/* Centered box styles */
 .centered-box {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80vh; /* Adjust the height as needed */
-    }
+}
 
-    /* Box styling */
+/* Box styling */
 .confirmation-box {
     padding: 20px;
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    }
+}
