--- a/templates/exit_parking.html
+++ b/templates/exit_parking.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
+
 {% block head %}
-<title>Parking Exit</title>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+    <title>Exit Page</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 {% endblock %}
+
 {% block body %}
-<form method="POST">
-    <label for="customer_id">Customer ID:</label>
-    <input type="text" id="customer_id" name="customer_id"><br><br>
-    <input type="submit" value="Exit">
-</form>
+    <div class="centered-box">
+        <div class="event-form">
+            <label for="customer-id">Customer ID:</label>
+            <input type="text" id="customer-id" name="customer-id" placeholder="Enter Customer ID"><br><br>
+
+            <button type="submit">Submit</button>
+        </div>
+    </div>
 {% endblock %}
