--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -144,7 +144,7 @@ h2 {
 }
 
 .event-form button {
-    background-color: #4cdf54; /* Green button background */
+    background-color: #313732; /* Green button background */
     color: rgb(176, 124, 124);
     cursor: pointer;
     font-size: 16px;
