--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -157,7 +157,7 @@ h2 {
 }
 
 .stand-box {
-    background-color: #423737; /* Light red background */
+    background-color: #302a2a; /* Light red background */
     padding: 10px;
     border-radius: 8px;
     margin-bottom: 15px; /* Adjust as needed */
