--- a/templates/bookingpage.html
+++ b/templates/bookingpage.html
@@ -7,37 +7,35 @@
 <h2>Book seats</h2>
 <form method="POST" action="{{ url_for('booking_page', id=id) }}">
     <h3>Available seats:{{no_of_seats}}</h3>
-    {% for standname in standnames %}
-    <div class="stand-box">
-        <h3>{{ standname['stand_name'] }}</h3>
+    <div class="stand-container">
+        {% for standname in standnames %}
+        <div class="stand-box">
+            <h3>{{ standname['stand_name'] }}</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Seat Number</th>
+                        <th>Price</th>
+                        <th>Select</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for seat in seats[standname['stand_name']] %}
+                    <tr>
+                        <td>{{ seat['seat_no'] }}</td>
+                        <td>{{ prices[standname['stand_name']] }}</td>
+                        <td>
+                            <label>
+                                <input type="checkbox" name="selected_seats" value="{{ standname['stand_name'] }}_{{ seat['seat_no'] }}">
+                            </label>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endfor %}
     </div>
-<table>
-    <table>
-        <thead>
-            <tr>
-                <th>Seat Number</th>
-                <th>Price</th>
-                <th>Select</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for seat in seats[standname['stand_name']] %}
-                <tr>
-                    <td>{{ seat['seat_no'] }}</td>
-                    <td>{{ prices[standname['stand_name']] }}</td>
-                    <td>
-                        <label>
-                            <input type="checkbox" name="selected_seats" value="{{ standname['stand_name'] }}_{{ seat['seat_no'] }}">
-                        </label>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    
-{% endfor %}
-
     <button type="submit">Book Selected Seats</button>
 </form>
-
 {% endblock %}
