--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -179,3 +179,46 @@ h2 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
+
+    /* Centered box styles */
+    .centered-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh; /* Adjust the height as needed */
+        background-color: #f3f3f3; /* Light gray background */
+    }
+
+    /* Table styles */
+    table {
+        border-collapse: collapse;
+        width: 80%;
+        margin: 20px;
+    }
+
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
+
+    button a {
+        text-decoration: none;
+        color: #fff;
+    }
+
+    button {
+        background-color: #007bff;
+        border: none;
+        border-radius: 5px;
+        padding: 5px 10px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #0056b3;
+    }
