--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block head %}
+<title>Ticket Confirmation</title>
 {% endblock %}
 {% block body %}
 <div class="centered-box">
