--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -21,7 +21,7 @@
                 <label for="event_type">Event Type:</label>
                 <select name="event_type" required>
                     <option value="concert">Concert</option>
-                    <option value="sport">Sports Event</option>
+                    <option value="Sport">Sport</option>
                 </select>
             </div>
             
@@ -33,12 +33,12 @@
 
             <div>
                 <label for="event_date">Event Date:</label>
-                <input type="date" name="event_date" required>
+                <input type="text" name="event_date" placeholder="yy-mm-dd" required>
             </div>
 
             <div>
                 <label for="start_time">Start Time:</label>
-                <input type="text" name="start_time" required>
+                <input type="text" name="start_time"  placeholder="hh:mm::ss" required>
             </div>
 
             <div>
