--- a/templates/entry_parking.html
+++ b/templates/entry_parking.html
@@ -7,18 +7,22 @@
 
 {% block body %}
     <div class="centered-box">
+        <form method="POST" action="{{ url_for('entry')}}">
         <div class="event-form">
-            <label for="customer-id">Customer ID:</label>
-            <input type="text" id="customer-id" name="customer-id" placeholder="Enter Customer ID"><br><br>
+            <label for="customer_id">Customer ID:</label>
+            <input type="text" id="customer_id" name="customer_id" placeholder="Enter Customer ID"><br><br>
 
-            <label for="parking-slot">Parking Slot:</label>
-            <select id="parking-slot" name="parking-slot">
-                <option value="slot1">Slot 1</option>
-                <option value="slot2">Slot 2</option>
+            <label for="parking_slot">Parking Slot:</label>
+            <select id="parking_slot" name="parking_slot">
+                {%for location in available_slots%}
+                <option value="{{location['location']}}" >{{location['location']}}</option>
+                {%endfor%}
+                
                 <!-- Add more options as needed -->
             </select><br><br>
 
             <button type="submit">Submit</button>
         </div>
+    </form>
     </div>
 {% endblock %}
