--- a/templates/manage_vendor.html
+++ b/templates/manage_vendor.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% block head %}
 <title>Stadium Management System-Events</title>
 <link rel="stylesheet" type="text/css" href="static\css\styles.css">
@@ -30,7 +32,6 @@
                 <td><button><a href="/admin/delete_vendor/{{vendor['Vendor_id']}}">Remove</a></button></td>
               </tr>
             {%endfor%}
-            <button><a href="/admin/create_vendor">Add vendor</a></button>
               
             </tbody>
           </table>
